fixed spacing on archive pages

--- a/assets/scss/templates/archive.scss
+++ b/assets/scss/templates/archive.scss
@@ -4,10 +4,6 @@
     clear: both;
     margin-bottom: $space-small*4;
 
-    &:last-child {
-      margin-bottom: $space-small;
-    }
-
     h1.entry-title {
       margin-bottom: 0;
     }
